--- a/test_example/config/hyperps.yaml
+++ b/test_example/config/hyperps.yaml
@@ -1,5 +1,5 @@
 general:
-    input_image_dir: '/home/sizhuo/Desktop/code_repository/treePoints/test_example/'
+    input_image_dir: 'test_example/'
     input_image_type: '.tif'  # '.tif'#'.jp2'
     input_image_pref: ''  # prefix of image file names, can be used to filter out images
     channel_names1:
@@ -12,7 +12,7 @@ general:
         - 1
         - 2
         - 3
-    output_dir: '/home/sizhuo/Desktop/code_repository/treePoints/test_example/preds/'
+    output_dir: 'test_example/preds/'
     output_suffix_seg: '_seg' # for segmentation
     output_suffix_density: '_density' # for density
     output_image_type: '.tif'
@@ -40,8 +40,8 @@ predict:
     STRIDE: 64 #224 or 196   # STRIDE: WIDTH means no overlap, STRIDE: WIDTH/2 means 50 % overlap in prediction
 
 postprocess:
-    chm_dir: '/mnt/ssdc/Denmark/DK_treeProject_DHI_KDS/elevation/DHM/'
-    elevation_dir: '/mnt/ssdc/Denmark/DK_treeProject_DHI_KDS/elevation/DTM/'
+    chm_dir: 'test_example/chms/'
+    elevation_dir: 'test_example/dtms/'
     min_dis: 10
     thres_abs: 0.0005
     alpha: 0.2
